# LaTeXStripper

./: .gitignore  LaTeXStripper.py  README.md  pyproject.toml
LaTeXStripper/: LaTeXStripper.py  __init__.py
src/latexstripper/: latexstripper.py
tests/: test_cleaning.py
