[tool.poetry]
name = "LaTeXStripper"
version = "0.1.0"
description = ""
authors = ["Jessica Walkenhorst <walkenho@gmail.com>"]

[tool.black]
line-length = 100

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
